# ArknightsDataAnalysisV2

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  v1_db_to_v2.py
api/: account_datas.py  accounts.py  arknights_data_analysis.py  arknights_data_request.py  auto_data_update.py  cache.py  captcha.py  datas.py  email.py  models.py  pydantic_models.py  statistics.py  users.py  utils.py
backapi/: account_datas.py  accounts.py  captcha.py  email.py  statistics.py  users.py  utils.py
data/: analysis.json  arkgacha_public_key.pem  gift_code.json  pool_info.json
data/email/: default.html
script/: v1_db_to_v2.py
src/: app.py  data_store.py  logger.py
src/api/: account_datas.py  accounts.py  arkgacha_data_import.py  arknights_data_analysis.py  arknights_data_request.py  auto_data_update.py  cache.py  captcha.py  databases.py  datas.py  email.py  models.py  statistics.py  users.py  utils.py
src/backapi/: account_datas.py  accounts.py  captcha.py  email.py  statistics.py  users.py  utils.py
src/config/: __init__.py  config.py  config_model.py
test/: test_captcha.html
